WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249849
Reset algorithm is incorrect for select element with first option disabled
https://bugs.webkit.org/show_bug.cgi?id=249849
Summary
Reset algorithm is incorrect for select element with first option disabled
Ahmad Saleem
Reported
2022-12-23 12:20:15 PST
Hi Team, While going through Blink's Form related commit, came across another failing test: Test Case -
https://jsfiddle.net/nbdztgeq/show
Blink Commit -
https://chromium.googlesource.com/chromium/src.git/+/5b2038755e5c1e046642373d6b3add2452b8eb2e
WebKit GitHub Source -
https://github.com/WebKit/WebKit/blob/7e5f5d82d9818bef7c998e4c6822c11118d92896/Source/WebCore/html/HTMLSelectElement.cpp#L1094
^ Note - we have to tailor test to only take passing ones because we are failing first one as well. Just wanted to raise so this can be fixed. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-12-23 16:46:00 PST
Committed
258313@main
(5aa94a8e95f6): <
https://commits.webkit.org/258313@main
> Reviewed commits have been landed. Closing PR #8050 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-12-23 16:46:18 PST
<
rdar://problem/103677144
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug