Reset algorithm is incorrect for select element with first option disabled

Reset algorithm is incorrect for select element with first option disabled
https://bugs.webkit.org/show_bug.cgi?id=249849

Reviewed by Tim Nguyen.

This patch is to align WebKit with Blink / Chromium, Gecko / Firefox and Web-Specification.

Web-Spec - https://www.w3.org/TR/html5/forms.html#ask-for-a-reset

Partial Merge - https://chromium.googlesource.com/chromium/src.git/+/5b2038755e5c1e046642373d6b3add2452b8eb2e

As per the spec, the user agent must set the selectedness of the first option element in the list
of options in tree order that is not disabled, if any, to true.

* Source/WebCore/html/HTMLSelectElement.cpp:
(HTMLSelectElement::reset): Update 'if' to also disallow selecting disabled option
* LayoutTests/fast/forms/select-ask-for-reset.html: Add Test Case
* LayoutTests/fast/forms/select-ask-for-reset-expected.txt: Add Test Case Expectation

Canonical link: https://commits.webkit.org/258313@main